<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sofa_creator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="creativedays.com.dilzas.SofaCreatorActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/living_room_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/pagers_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:padding="20dp">

            <custom_views.CustomViewPager
                android:id="@+id/body_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></custom_views.CustomViewPager>

            <custom_views.CustomViewPager
                android:id="@+id/pilows_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></custom_views.CustomViewPager>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/toolbox"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:background="@drawable/tools_bg_light"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:padding="5dp">

                <TextView
                    android:background="@color/selected_blue_trans"
                    android:id="@+id/body_tab"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/body"
                    android:textSize="17sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/menu_text" />

                <TextView
                    android:id="@+id/pillows_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pillows"
                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/collection"
                    android:textSize="17sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/menu_text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/color"
                    android:textSize="17sp" />

            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/pillows_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/pillows_fabrics"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/menu_text" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/pillows_colors"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/body_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/body_fabrics"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                         />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/menu_text" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/body_colors"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                         />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/back_white"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/camera"
            android:layout_marginLeft="20dp"
            android:src="@drawable/camera"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/menu"
            android:layout_marginLeft="20dp"
            android:src="@drawable/menu"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>

</FrameLayout>
